# crewai_jupyter

./: .gitignore  README.md  README_SETUP.md  pyproject.toml
Collaboration/: crewai_collaboration.ipynb
Guardrails/: task_guardrails.ipynb
Planning/: crewai_planning.ipynb
Prompt_Caching/: README.md  crewai_anthropic_prompt_caching_cookbook.ipynb
Reasoning/: crewai_reasoning.ipynb
